fix layout issues

--- a/css/ridlen.css
+++ b/css/ridlen.css
@@ -29,7 +29,6 @@ body {
     clear: left;
     float: left;
     padding: 0 20px 0 0;
-    width: 647px;
     border-bottom: 1px solid #eee;
     border-top: 1px solid #fff; } 
   #main article:first-child { border-top: none; }
